--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -8,6 +8,39 @@
     android:background="@color/darkblue"
     tools:context=".MusicScreen">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_marginTop="1dp"
+        android:background="@color/snoozeBlau"
+
+        android:backgroundTint="#314D59"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/seatImageView__MusicScreen_ID"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_action_seat" />
+
+        <ImageView
+            android:id="@+id/lightImageView_MusicScreen_ID"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/light_icon" />
+
+        <ImageView
+            android:id="@+id/musicImageView_MusicScreen_ID"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/music_icon" />
+    </LinearLayout>
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline9"
@@ -205,7 +238,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="135dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="604dp"
+        app:layout_constraintGuide_begin="121dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -240,7 +273,12 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
-
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="57dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
