--- a/app/src/main/res/layout/activity_seat_screen.xml
+++ b/app/src/main/res/layout/activity_seat_screen.xml
@@ -14,14 +14,14 @@
         android:layout_marginEnd="180dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_begin="1072dp" />
+        app:layout_constraintGuide_begin="1064dp" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="185dp"
         android:layout_height="44dp"
-        android:layout_marginStart="768dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginStart="788dp"
+        android:layout_marginTop="72dp"
         android:fontFamily="@font/bungee2"
         android:gravity="center"
         android:text="@string/pickPosition"
@@ -30,11 +30,59 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="131dp"
+        android:layout_height="341dp"
+        android:layout_marginTop="172dp"
+        android:layout_marginEnd="272dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/FavPos"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/LyingPose"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/ZeroGravityPos"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal|fill_vertical"
+            android:text="@string/SittingPos"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/PosButtonLayout_ID"
         android:layout_width="103dp"
         android:layout_height="320dp"
         android:layout_marginTop="180dp"
-        android:layout_marginEnd="420dp"
+        android:layout_marginEnd="400dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -92,50 +140,86 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/sliderlayout_ID"
-        android:layout_width="247dp"
+        android:layout_width="73dp"
         android:layout_height="246dp"
-        android:layout_marginStart="260dp"
-        android:layout_marginTop="235dp"
+        android:layout_marginTop="240dp"
+        android:layout_marginEnd="656dp"
         android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <SeekBar
-            android:id="@+id/seekBarTop_ID"
-            android:layout_width="match_parent"
-            android:layout_height="84dp"
-            android:layout_gravity="center_horizontal"
-            android:max="87"
-            android:layout_weight="1"
-            android:foregroundGravity="center" />
-
-        <SeekBar
-            android:id="@+id/seekBarMiddle_ID"
+        <ImageView
+            android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:max ="30"
+            android:layout_marginTop="7dp"
+            android:foregroundGravity="center"
+            app:srcCompat="@drawable/backresticon" />
 
-            />
-
-        <SeekBar
-            android:id="@+id/seekBarDown_ID"
+        <ImageView
+            android:id="@+id/imageView4"
             android:layout_width="match_parent"
             android:layout_height="82dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:max="90"
-            />
+            android:layout_marginTop="2dp"
+            android:foregroundGravity="center"
+            app:srcCompat="@drawable/seaticon" />
 
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="match_parent"
+            android:layout_height="76dp"
+            android:layout_marginBottom="8dp"
+            android:foregroundGravity="center"
+            app:srcCompat="@drawable/footresticon" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="428dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="212dp"
+        android:layout_marginTop="152dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/editTextBackrest_ID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="43dp"
+            android:layout_weight="1"
+            android:ems="10"
+
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/editTextSeat_ID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="70dp"
+            android:layout_marginEnd="70dp"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/editTextFeetrest_ID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="37dp"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="number" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="87dp"
         android:layout_height="235dp"
-        android:layout_marginStart="190dp"
-        android:layout_marginTop="243dp"
+        android:layout_marginStart="216dp"
+        android:layout_marginTop="248dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -173,147 +257,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="131dp"
-        android:layout_height="341dp"
-        android:layout_marginTop="172dp"
-        android:layout_marginEnd="290dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/FavPos"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/LyingPose"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/ZeroGravityPos"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_weight="1"
-            android:gravity="center_horizontal|fill_vertical"
-            android:text="@string/SittingPos"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="428dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="184dp"
-        android:layout_marginTop="148dp"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/editTextBackrest_ID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="43dp"
-            android:layout_weight="1"
-            android:ems="10"
-
-            android:inputType="number" />
-
-        <EditText
-            android:id="@+id/editTextSeat_ID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="70dp"
-            android:layout_marginEnd="70dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="number" />
-
-        <EditText
-            android:id="@+id/editTextFeetrest_ID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="37dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="number" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="73dp"
-        android:layout_height="246dp"
-        android:layout_marginTop="236dp"
-        android:layout_marginEnd="684dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="7dp"
-            android:foregroundGravity="center"
-            app:srcCompat="@drawable/backresticon" />
-
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="match_parent"
-            android:layout_height="82dp"
-            android:layout_marginTop="2dp"
-            android:foregroundGravity="center"
-            app:srcCompat="@drawable/seaticon" />
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="match_parent"
-            android:layout_height="76dp"
-            android:layout_marginBottom="8dp"
-            android:foregroundGravity="center"
-            app:srcCompat="@drawable/footresticon" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="207dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="304dp"
-        android:layout_marginTop="60dp"
-        android:fontFamily="@font/bungee2"
-        android:gravity="center"
-        android:text="@string/adjustPosition"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
         android:layout_width="431dp"
         android:layout_height="37dp"
-        android:layout_marginStart="184dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginStart="212dp"
+        android:layout_marginTop="136dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -346,13 +293,65 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/sliderlayout_ID"
+        android:layout_width="247dp"
+        android:layout_height="246dp"
+        android:layout_marginStart="288dp"
+        android:layout_marginTop="240dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <SeekBar
+            android:id="@+id/seekBarTop_ID"
+            android:layout_width="match_parent"
+            android:layout_height="84dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:foregroundGravity="center"
+            android:max="87" />
+
+        <SeekBar
+            android:id="@+id/seekBarMiddle_ID"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:max="30"
+
+            />
+
+        <SeekBar
+            android:id="@+id/seekBarDown_ID"
+            android:layout_width="match_parent"
+            android:layout_height="82dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:max="90" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="207dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="328dp"
+        android:layout_marginTop="72dp"
+        android:fontFamily="@font/bungee2"
+        android:gravity="center"
+        android:text="@string/adjustPosition"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="180dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="183dp"
+        app:layout_constraintGuide_end="1074dp"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -378,7 +377,7 @@
         android:layout_marginStart="336dp"
         android:layout_marginTop="576dp"
         android:background="@drawable/rounded_corners"
-        android:text="Save as Favorite"
+        android:text="@string/save_as_favorite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -407,5 +406,38 @@
         android:background="@drawable/stop_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_marginTop="1dp"
+        android:background="@color/snoozeBlau"
+
+        android:backgroundTint="#314D59"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/seatImageView_ID"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_action_seat" />
+
+        <ImageView
+            android:id="@+id/lightImageView_ID"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/light_icon" />
+
+        <ImageView
+            android:id="@+id/musicImageView_ID"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/music_icon" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
