--- a/app/src/main/res/layout/activity_seat_screen.xml
+++ b/app/src/main/res/layout/activity_seat_screen.xml
@@ -192,6 +192,10 @@
             android:layout_marginLeft="43dp"
             android:layout_weight="1"
             android:ems="10"
+            android:autofillHints=""
+
+            android:gravity="center"
+            android:hint="@string/angle"
 
             android:inputType="number" />
 
@@ -203,6 +207,10 @@
             android:layout_marginEnd="70dp"
             android:layout_weight="1"
             android:ems="10"
+            android:autofillHints=""
+
+            android:gravity="center"
+            android:hint="@string/angle"
             android:inputType="number" />
 
         <EditText
@@ -211,6 +219,10 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="37dp"
             android:layout_weight="1"
+            android:autofillHints=""
+
+            android:gravity="center"
+            android:hint="@string/angle"
             android:ems="10"
             android:inputType="number" />
     </LinearLayout>
@@ -410,7 +422,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_marginTop="1dp"
         android:background="@color/snoozeBlau"
 
         android:backgroundTint="#000000"
@@ -424,7 +435,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
 
-            app:srcCompat="@drawable/seat_icon_white"/>
+            app:srcCompat="@drawable/seat_icon_white" />
 
         <ImageView
             android:id="@+id/lightImageView_ID"
